k8s/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: paysaxas-gateway
  namespace: paysaxas
  labels:
    app.kubernetes.io/name: paysaxas-gateway
    app.kubernetes.io/part-of: paysaxas
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paysaxas-route
  namespace: paysaxas
  labels:
    app.kubernetes.io/name: paysaxas-route
    app.kubernetes.io/part-of: paysaxas
spec:
  parentRefs:
    - name: paysaxas-gateway
      namespace: paysaxas
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paysaxas-app
          port: 5000
